Fix login button text overlapping

--- a/assets/confetti-button.css
+++ b/assets/confetti-button.css
@@ -62,6 +62,9 @@ canvas {
 #login-button.loading .loadingMessage {
   opacity: 1;
 }
+#login-button.loading .submitMessage {
+  display: none;
+}
 #login-button.loading .loadingCircle {
   animation-duration: 1s;
   animation-iteration-count: infinite;
@@ -79,7 +82,10 @@ canvas {
   transition: none;
 }
 #login-button.complete .loadingMessage {
-  top: 80px;
+  display: none;
+}
+#login-button.complete .submitMessage {
+  display: none;
 }
 #login-button.complete .successMessage .button-text span {
   left: 0;
